add some jvm-opts